--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>属于大家的计算机学院</title>
     <!--<link rel="stylesheet" href="css/resetcss.css">-->
+    <link rel="stylesheet" href="material/font-awesome/css/font-awesome.min.css">
     <style>
         *{
             margin: 0;
@@ -36,9 +37,16 @@
             justify-content: center;
             align-items: center;
             background-color: #001e3c;
+            width: 100%;
             height: 123px;
-            width: auto;
+
             /*box-shadow: 0 3px 3px black;*/
+        }
+        .header-introduce{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 1225px;
         }
         .header-introduce p{
             font-size: 36px;
@@ -53,7 +61,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            width: 1225px;
+            width: 100%;
             height: 560px;
             margin: 65px auto;
 
@@ -164,10 +172,10 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1kWhXhMB">计算机相关pdf书籍（暂未分类·等待补充）<br><b>此资料群内分享</b></a>
+                    <a href="https://pan.baidu.com/s/1kWhXhMB">计算机相关pdf书籍<br><b>此资料见群文件</b></a>
                 </div>
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1kWmaTin">前端视频（HTML-JS-DOM-特效-JQuery-HTML5-CSS3-移动WEB-Ajax-JS高级-Canvas-框架封装-AngularJS-Node）<br><b>密码：2a1h</b></a>
+                    <a href="https://pan.baidu.com/s/1kWmaTin">前端基础全套<br><b>密码：2a1h</b></a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -183,7 +191,7 @@
 <!--通知-->
         <div class="article-block inform">
             <div class="article-block-top">
-                <div class="article-block-ornament"></div>
+                <div class="article-block-ornament" style="background-color: #cccccc"></div>
                 <div class="article-block-top-title"><h2>社区通知</h2></div>
             </div>
             <div class="article-block-content">
@@ -208,11 +216,35 @@
         <div class="article-block">
             <div class="article-block-top">
                 <div class="article-block-ornament"></div>
-                <div class="article-block-top-title"><h2>JAVA相关</h2></div>
+                <div class="article-block-top-title"><h2>Python/人工智能</h2></div>
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="#">等待收集</a>
+                    <a href="https://pan.baidu.com/s/1qZU6gmK">Python基础全套视频</a>
+                </div>
+                <div class="article-news">
+                    <a href="https://pan.baidu.com/s/1pNoQSob">Python人工智能</a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-block-footer">
+                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="article-block">
+            <div class="article-block-top">
+                <div class="article-block-ornament"></div>
+                <div class="article-block-top-title"><h2>Java</h2></div>
+            </div>
+            <div class="article-block-content">
+                <div class="article-news">
+                    <a href="https://pan.baidu.com/s/1bq5ohHl?qq-pf-to=pcqq.group#list/path=%2F">Java基础全套视频</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -229,8 +261,105 @@
             </div>
         </div>
 
+        </div>
 
 
+        <div class="content">
+            <div class="article-block">
+                <div class="article-block-top">
+                    <div class="article-block-ornament"></div>
+                    <div class="article-block-top-title"><h2>汇编</h2></div>
+                </div>
+                <div class="article-block-content">
+                    <div class="article-news">
+                        <a href="https://pan.baidu.com/s/1bq5ohHl?qq-pf-to=pcqq.group#list/path=%2F">汇编语言视频教程</a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-block-footer">
+                        <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="article-block">
+                <div class="article-block-top">
+                    <div class="article-block-ornament"></div>
+                    <div class="article-block-top-title"><h2>PHP</h2></div>
+                </div>
+                <div class="article-block-content">
+                    <div class="article-news">
+                        <a href="#">等待更新</a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-block-footer">
+                        <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="article-block">
+                <div class="article-block-top">
+                    <div class="article-block-ornament"></div>
+                    <div class="article-block-top-title"><h2>C</h2></div>
+                </div>
+                <div class="article-block-content">
+                    <div class="article-news">
+                        <a href="#">等待更新</a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-block-footer">
+                        <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="article-block">
+                <div class="article-block-top">
+                    <div class="article-block-ornament"></div>
+                    <div class="article-block-top-title"><h2>C++</h2></div>
+                </div>
+                <div class="article-block-content">
+                    <div class="article-news">
+                        <a href="#">等待更新</a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-news">
+                        <a href="#"></a>
+                    </div>
+                    <div class="article-block-footer">
+                        <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                    </div>
+                </div>
+            </div>
         </div>
 </body>
 </html>
