--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>属于大家的计算机学院</title>
+    <title>属于大家的计算机学习社区</title>
     <!--<link rel="stylesheet" href="css/resetcss.css">-->
     <link rel="stylesheet" href="material/font-awesome/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="images/code.png" type="image/x-icon">
     <style>
         *{
             margin: 0;
@@ -202,7 +203,8 @@
                     <a href="#">因时间有限，自建页面，资源不足，还望谅解，想要获得或共享资源，提出改善意见，请联系社区群群主[柔情]。</a>
                 </div>
                 <div class="article-news">
-                    <a href="#">版本：Beta V1.0<br>更新日志（2018-1-30）： 页面建设，添加了前端相关资料。</a>
+                    <!--<a href="#">版本：Beta V1.0<br>更新日志（2018-1-30）： 页面建设，添加了前端相关资料。</a>-->
+                    <a href="#">版本：Beta V1.1<br>更新日志（2018-2-1）： 页面建设，添加了Python,java等资料。</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
