--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!--<link rel="stylesheet" href="css/resetcss.css">-->
     <link rel="stylesheet" href="material/font-awesome/css/font-awesome.min.css">
     <link rel="shortcut icon" href="images/code.png" type="image/x-icon">
-    <link rel="stylesheet" media="screen and (max-width:600px)" href="css/indexSmall.css" type="text/css" />
-    <link rel="stylesheet" media="screen and (min-width:600px)" href="css/indexNormal.css" type="text/css" />
+    <!--<link rel="stylesheet" media="screen and (max-width:600px)" href="css/indexSmall.css" type="text/css" />-->
+    <link rel="stylesheet" href="css/indexNormal.css" type="text/css" />
 
 </head>
 <body>
@@ -115,105 +115,132 @@
             </div>
         </div>
 
-        </div>
 
 
-        <div class="content">
-            <div class="article-block">
-                <div class="article-block-top">
-                    <div class="article-block-ornament"></div>
-                    <div class="article-block-top-title"><h2>汇编</h2></div>
-                </div>
-                <div class="article-block-content">
-                    <div class="article-news">
-                        <a href="https://pan.baidu.com/s/1bq5ohHl?qq-pf-to=pcqq.group#list/path=%2F">汇编语言视频教程</a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-block-footer">
-                        <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
-                    </div>
-                </div>
+        <div class="article-block">
+            <div class="article-block-top">
+                <div class="article-block-ornament"></div>
+                <div class="article-block-top-title"><h2>汇编</h2></div>
             </div>
-
-            <div class="article-block">
-                <div class="article-block-top">
-                    <div class="article-block-ornament"></div>
-                    <div class="article-block-top-title"><h2>PHP</h2></div>
+            <div class="article-block-content">
+                <div class="article-news">
+                    <a href="https://pan.baidu.com/s/1bq5ohHl?qq-pf-to=pcqq.group#list/path=%2F">汇编语言视频教程</a>
                 </div>
-                <div class="article-block-content">
-                    <div class="article-news">
-                        <a href="#">等待更新</a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-block-footer">
-                        <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
-                    </div>
+                <div class="article-news">
+                    <a href="#"></a>
                 </div>
-            </div>
-
-            <div class="article-block">
-                <div class="article-block-top">
-                    <div class="article-block-ornament"></div>
-                    <div class="article-block-top-title"><h2>C</h2></div>
+                <div class="article-news">
+                    <a href="#"></a>
                 </div>
-                <div class="article-block-content">
-                    <div class="article-news">
-                        <a href="#">等待更新</a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-block-footer">
-                        <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
-                    </div>
+                <div class="article-news">
+                    <a href="#"></a>
                 </div>
-            </div>
-
-            <div class="article-block">
-                <div class="article-block-top">
-                    <div class="article-block-ornament"></div>
-                    <div class="article-block-top-title"><h2>C++</h2></div>
-                </div>
-                <div class="article-block-content">
-                    <div class="article-news">
-                        <a href="#">等待更新</a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-news">
-                        <a href="#"></a>
-                    </div>
-                    <div class="article-block-footer">
-                        <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
-                    </div>
+                <div class="article-block-footer">
+                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
                 </div>
             </div>
         </div>
+
+        <div class="article-block">
+            <div class="article-block-top">
+                <div class="article-block-ornament"></div>
+                <div class="article-block-top-title"><h2>PHP</h2></div>
+            </div>
+            <div class="article-block-content">
+                <div class="article-news">
+                    <a href="#">等待更新</a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-block-footer">
+                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="article-block">
+            <div class="article-block-top">
+                <div class="article-block-ornament"></div>
+                <div class="article-block-top-title"><h2>C</h2></div>
+            </div>
+            <div class="article-block-content">
+                <div class="article-news">
+                    <a href="#">等待更新</a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-block-footer">
+                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="article-block">
+            <div class="article-block-top">
+                <div class="article-block-ornament"></div>
+                <div class="article-block-top-title"><h2>C++</h2></div>
+            </div>
+            <div class="article-block-content">
+                <div class="article-news">
+                    <a href="#">等待更新</a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-block-footer">
+                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="article-block">
+            <div class="article-block-top">
+                <div class="article-block-ornament"></div>
+                <div class="article-block-top-title"><h2>计算机理论</h2></div>
+            </div>
+            <div class="article-block-content">
+                <div class="article-news">
+                    <a href="#">等待更新</a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-news">
+                    <a href="#"></a>
+                </div>
+                <div class="article-block-footer">
+                    <a href="#">更多 <span class="fa fa-angle-double-right"></span></a>
+                </div>
+            </div>
+        </div>
+
+        </div>
+
+
+
+
 </body>
 </html>
