--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1bq5ohHl?qq-pf-to=pcqq.group#list/path=%2F">汇编语言视频教程</a>
+                    <a href="#">汇编语言视频教程</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
