--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="https://pan.baidu.com/s/1kWhXhMB">计算机相关pdf书籍<br><b>此资料见群文件</b></a>
                 </div>
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1kWmaTin">前端基础全套<br><b>密码：2a1h</b></a>
+                    <a href="https://pan.baidu.com/s/1bqot5NL">前端基础全套</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -124,7 +124,7 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="#">汇编语言视频教程</a>
+                    <a href="https://pan.baidu.com/s/1ggZ83mj">汇编语言视频教程</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
