--- a/Two Of Us.html
+++ b/Two Of Us.html
@@ -5,6 +5,7 @@
     <title>Two Of Us</title>
     <link rel="stylesheet" href="css/resetcss.css">
     <link rel="shortcut icon" href="images/love.ico" type="image/x-icon">
+    <embed src="material/伏仪%20-%20记昨日书.mp3" autostart="true" loop="true" hidden="true">
     <style>
         body{
             background-color: #fff;
