--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1kWhXhMB">计算机相关pdf书籍<br><b>此资料见群文件</b></a>
+                    <a href="">计算机相关pdf书籍<br><b>因为百度网盘限制，此资料上传在群文件</b></a>
                 </div>
                 <div class="article-news">
                     <a href="https://pan.baidu.com/s/1bqot5NL">前端基础全套</a>
@@ -56,7 +56,8 @@
                 </div>
                 <div class="article-news">
                     <!--<a href="#">版本：Beta V1.0<br>更新日志（2018-1-30）： 页面建设，添加了前端相关资料。</a>-->
-                    <a href="#">版本：Beta V1.1<br>更新日志（2018-2-1）： 页面建设，添加了Python,java等资料。</a>
+                    <!--<a href="#">版本：Beta V1.1<br>更新日志（2018-2-1）： 页面建设，添加了Python,java等资料。</a>-->
+                    <a href="#">版本：Beta V1.2<br>更新日志（2018-2-14）： 页面维护</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -74,10 +75,10 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1qZU6gmK">Python基础全套视频</a>
+                    <a href="https://pan.baidu.com/s/1mjwjare">Python基础全套视频</a>
                 </div>
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1pNoQSob">Python人工智能</a>
+                    <a href=""></a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -98,7 +99,7 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1bq5ohHl?qq-pf-to=pcqq.group#list/path=%2F">Java基础全套视频</a>
+                    <a href="https://pan.baidu.com/s/1pNj1UbT">Java基础全套视频</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -124,7 +125,7 @@
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="https://pan.baidu.com/s/1ggZ83mj">汇编语言视频教程</a>
+                    <a href="https://pan.baidu.com/s/1bqMjN7T">汇编语言视频教程</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
