--- a/aini.html
+++ b/aini.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>aini</title>
     <style>
 
         body{
+            width: 425px;
             padding: 0;
             margin: 0;
             height: auto;
