--- a/aini.html
+++ b/aini.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>aini</title>
     <style>
-
         body{
-            width: 425px;
+            width: 100%;
             padding: 0;
             margin: 0;
             height: auto;
             background-color: #fff;
-            font: bold 34px/36px "Yu Gothic";
+            font: bold 44px/46px "Yu Gothic";
             color: #000000;
         }
         .content{
@@ -21,8 +20,8 @@
             flex-wrap: wrap;
             justify-content: space-around;
             margin: 100px auto;
-            width: 300px;
-            height: 400px;
+            width: 80%;
+            height: 600px;
             border: 1px solid #cccccc;
             background-color: #ffffff;
             border-radius: 3%;
@@ -32,7 +31,8 @@
             text-align: center;
         }
         .box{
-            width: 250px;
+            width:80%;
+            height: 20%;
             display: flex;
             justify-content: space-around;
         }
@@ -40,9 +40,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 100px;
-            height: 50px;
-            font: bold 26px/36px "Yu Gothic";
+            width: 40%;
+            height: 80%;
+            font: bold 40px/46px "Yu Gothic";
 
 
             background-color: #efefef;
@@ -50,8 +50,8 @@
         }
         button{
             font: bold 26px/36px "Yu Gothic";
-            width: 80px;
-            height: 50px;
+            width: 20%;
+            height: 15%;
             background-color: #efefef;
             border: 1px solid #cccccc;
             border-radius: 5%;
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="content">
-        <p>做我女朋友好不好</p>
+        <p>做我女朋友可好</p>
         <div class="box">
             <div class="select right">好</div>
             <div class="select false">不好</div>
