--- a/aini.html
+++ b/aini.html
@@ -19,10 +19,10 @@
             align-items: center;
             position: absolute;
             width: 100%;
-            height: 40%;
+            height: 10%;
             margin-left: 50%;
             margin-top: 50%;
-            transform: translate(-50%,-120%);
+            transform: translate(-50%,-80%);
             font: bold 52px/52px "微软雅黑";
             background-color: #cccccc;
             border-radius: 3%;
@@ -35,15 +35,15 @@
             align-items: center;
             position: absolute;
             width: 100%;
-            height: 40%;
+            height: 10%;
             margin-left: 50%;
             margin-top: 50%;
-            transform: translate(-50%,-120%);
+            transform: translate(-50%,-80%);
             font: bold 52px/52px "微软雅黑";
             background-color: #cccccc;
             border-radius: 3%;
             box-shadow: 0 0 15px -5px #000000;
-            opacity: 1;
+            opacity: 0.5;
         }
         .content{
             display: flex;
@@ -96,7 +96,7 @@
 </head>
 <body>
     <div class="alert">
-        获得男朋友一只
+        恭喜你获得男朋友一只
     </div>
     <div class="warning">
         请选择
