--- a/aini.html
+++ b/aini.html
@@ -9,9 +9,11 @@
             padding: 0;
             margin: 0;
             height: auto;
-            background-color: #fff;
+            /*background-color: #fff;*/
             font: bold 44px/46px "Yu Gothic";
             color: #000000;
+            /*background:-webkit-gradient(linear, 0 0, 0 bottom, from(#FFCC99), to(#99CC99));*/
+            background-color: #ebebeb;
         }
         .alert{
             display: none;
@@ -55,7 +57,8 @@
             width: 80%;
             height: 600px;
             border: 1px solid #cccccc;
-            background-color: #ffffff;
+            /*background:-webkit-gradient(linear, 0 0, 0 bottom, from(#CCFFFF), to(#FFFF99));*/
+            background-color: white;
             border-radius: 3%;
             box-shadow: 0 0 15px -5px #000000;
         }
@@ -84,10 +87,10 @@
             font: bold 26px/36px "Yu Gothic";
             width: 20%;
             height: 15%;
-            background-color: #efefef;
+            background-color: #ffffff;
             border: 1px solid #cccccc;
             border-radius: 5%;
-            box-shadow: 0 0 10px -5px #000000;
+            box-shadow: 0 0 10px -5px #efefef;
         }
         .clear{
             display: flex;
