--- a/aini.html
+++ b/aini.html
@@ -105,7 +105,7 @@
         请选择
     </div>
     <div class="content">
-        <p>做我女朋友可好</p>
+        <p>做我女朋友可好<img src="images/可爱1.jpg"></p>
         <div class="box">
             <div class="select right">好</div>
             <div class="select false">不好</div>
