--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>属于大家的计算机学习社区</title>
+    <title>属于大家的学习社区</title>
     <!--<link rel="stylesheet" href="css/resetcss.css">-->
     <link rel="stylesheet" href="material/font-awesome/css/font-awesome.min.css">
     <link rel="shortcut icon" href="images/code.png" type="image/x-icon">
@@ -13,7 +13,7 @@
 <body>
 <div class="header">
     <div class="header-introduce">
-        <p>属于大家的计算机学习社区</p>
+        <p>属于大家的学习社区</p>
     </div>
 </div>
 
@@ -145,11 +145,11 @@
         <div class="article-block">
             <div class="article-block-top">
                 <div class="article-block-ornament"></div>
-                <div class="article-block-top-title"><h2>PHP</h2></div>
+                <div class="article-block-top-title"><h2>设计</h2></div>
             </div>
             <div class="article-block-content">
                 <div class="article-news">
-                    <a href="#">等待更新</a>
+                    <a href="https://pan.baidu.com/s/1ht2wPl6">Photoshop/Ai/平面设计等全套</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
@@ -240,7 +240,7 @@
 
         </div>
 
-
+       <div class="footer"></div>
 
 
 </body>
