--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <a href="http://www.57fx.com/search/"><b>57分享</b>：百度网盘资源检索</a>
                 </div>
                 <div class="article-news">
-                    <a href="#"></a>
+                    <a href="#"><b>软件安装管家（微信公众号）</b>：免费提供了各类软件安装包，如PS、DW、3dmax、maya、CAD、win10系统镜像，等等</a>
                 </div>
                 <div class="article-news">
                     <a href="#"></a>
