--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
   <head>
     <!-- 头部配置 -->
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>CYan | 资源导航</title>
+    <title>资源导航</title>
 
     <!-- 引入Bootstrap核心样式表文件 -->
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
