--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container" id="container-top">
       <div class="starter-template">
         <img id="logo" class="img-responsive center-block logo" src="img/studentIcon.svg" alt="icon">
-        <h1 class="">C的资源库</h1>
+        <h1 class="">资源库</h1>
         <p class="lead">不在寻找上浪费时间。<br>高效的学习，生活，工作。</p>
       </div>
     </div>
