--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
     <!-- /依赖库 -->
     <script>
       $('#contactMe').click(function(){
-        $('#qq').show();
+        $('#qq').show(1400);
       });
     </script>
   </body>
