--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <h1>资源库</h1>
             <p>发挥群体的力量，获取及更新学习资料。</p>
             <p>降低学习门槛与成本。</p>
-            <p>一切免费</p>
+            <p>一切免费。</p>
           <!--   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
         </div>
     </div>
