--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
     </nav>
 
     <div class="jumbotron jumbotron-main">
-         <div class="container">
-            <h3>资源库</h3>
-            <p>发挥群体的力量，获取及共享学习资料。<br/>打破利益壁垒，降低学习门槛与成本。<br/>而且免费。</p>
-
+         <div class="container about-main">
+            <!-- <h3>资源库</h3>
+            <p>发挥群体的力量，获取及共享学习资料。<br/>禁止资料倒卖。</p>
+ -->
             <h3>关于本站</h3>
             <p>在校学生独立制作，无测试人员，发现页面/资料错误，<a href="https://jq.qq.com/?_wv=1027&k=5gGyUPQ">联系管理人员。</a><br/>学业繁重，更新缓慢，敬请谅解。</p>
             <br/>
